--- a/source-for-lazarus/pointfrip.lpi
+++ b/source-for-lazarus/pointfrip.lpi
@@ -32,7 +32,7 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="15">
+    <Units Count="16">
       <Unit0>
         <Filename Value="pointfrip.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -102,6 +102,10 @@
         <Filename Value="typeunit.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit14>
+      <Unit15>
+        <Filename Value="jsonunit.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit15>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
